tests/ui/json/json-short.rs
//@ compile-flags: --json=diagnostic-short --error-format=json

// ferrocene-annotations: um_rustc_json
// ferrocene-annotations: um_rustc_error_format
